# ultraplonk_verifier

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: CI-ci-remote.yml
patches/: barretenberg_001.patch
src/: acir.rs  key.rs  lib.rs
tests/: integration.rs
